# stock-index-analyze

./: .gitignore  README.md  pyproject.toml
data/monthly/: aex-usd.csv  asx-200.csv  bitcoin-usd.csv  brazil-bovespa.csv  brent-oil.csv  cac-40.csv  copper.csv  crude-oil.csv  dax.csv  dow-jones-industrial-average-usd.csv  ftse-100-usd.csv  gold-bullion-usd.csv  hang-seng.csv  ishares-msci-acwi-etf.csv  ishares-msci-world-etf.csv  ishares-russell-2000-etf.csv  jpx-nikkei-400-usd.csv  msci-ac-asia-pacific-ex-japan-usd.csv  msci-acwi-imi-usd.csv  msci-acwi-usd.csv  msci-china-usd.csv  msci-emerging-markets-usd.csv  msci-emu-usd.csv  msci-europe-value-usd.csv  msci-india-usd.csv  msci-japan-usd.csv  msci-usa-usd.csv  msci-world-index-usd.csv  msci-world-information-technology-usd.csv  msci-world-small-cap-usd.csv  nasdaq-100-usd.csv  nasdaq-100.csv  nasdaq-composite.csv  natural-gas.csv  nordic-countries-usd.csv  omx-helsinki-25-finland.csv  omx-oslo-20-norway.csv  omx.csv  shanghai-composite.csv  silver.csv  (+9 more)
notebooks/: rolling.ipynb
src/index_analyze/: analyze.py  buy_and_hold.py  buy_every.py  download_data.py  first_try.py  index_stats.py  main.py  read_data.py  read_json.py  rolling_investment.py  run_all.py
src/index_analyze/data/: download_data.py  read_avanza.py  read_csv.py  transform_csv.py
src/index_analyze/lib/: analyze.py  investor.py
tests/: test_buy_and_hold.py  test_buy_every.py  test_buy_every_analyze.py  test_buy_every_mean_shares.py  test_index_stats.py  test_rolling_investment.py
